convert rag app to use fastapi

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,5 +17,8 @@ dependencies = [
     "ragas",
     "rapidfuzz",
     "ipykernel",
-    "instructor"
+    "instructor",
+    "fastapi",
+    "uvicorn",
+    "httpx"
 ]
