--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,5 +27,7 @@ dependencies = [
     "psycopg2-binary",
     "psycopg[binary]",
     "mcp[cli]",
-    "fastmcp"
+    "fastmcp >= 2.11.2",
+    "litellm",
+    "litellm[proxy]"
 ]
